Auto stash before merge of "main" and "origin/main"

--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,9 @@ lectures
 material
 # old projcts
 *.pdf
+
+assingment2/A2-1.pdf
+
+assingment2/a2_data/images.npy
+
+assingment2/a2_data/labels.npy
